# Voice_Emotion_Recognition

Voice_Emotion_Recognition/: .gitignore  README.md  ap.py  app.py  main.py  plan.txt  pyproject.toml  requirements.txt
