[project]
name = "voice-emotion-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "soundfile>=0.13.1",
    "streamlit>=1.55.0",
    "streamlit-audiorec>=0.1.3",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
